bin_PROGRAMS = loftili
loftili_CPPFLAGS = \
	-I../inc \
	-I../vendor/rapidjson/include
loftili_SOURCES = \
  main.cpp \
  engine.cpp \
  lib/stream.cpp \
  lib/command.cpp \
  net/url.cpp \
  net/socket.cpp \
	net/command.cpp \
	net/request.cpp \
	net/response.cpp \
  net/generic_command.cpp \
  net/command_stream.cpp \
  net/response_stream.cpp \
  api/registration.cpp \
	commands/audio/start.cpp \
	audio/queue.cpp \
	audio/player.cpp \
  audio/playback.cpp
