bin_PROGRAMS = loftili
loftili_CPPFLAGS = \
	-I../inc \
	-I../vendor/rapidjson/include \
	-I../vendor/spdlog/include
loftili_SOURCES = \
	main.cpp \
	engine.cpp \
	lib/stream.cpp \
	lib/command.cpp \
	net/url.cpp \
	net/tcp_socket.cpp \
	net/http_request.cpp \
	net/http_response.cpp \
	net/http_client.cpp \
	net/http_parser.cpp \
	net/command.cpp \
	net/generic_command.cpp \
	net/command_stream.cpp \
	api/registration.cpp \
	api/state_client.cpp \
	commands/audio/start.cpp \
	commands/audio/stop.cpp \
	commands/audio/skip.cpp \
	audio/queue.cpp \
	audio/player.cpp \
	audio/playback.cpp
